--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -68,6 +68,13 @@ jobs:
         name: python-artifacts
         path: .
 
+    - name: Upload helm artifacts
+      if: github.ref_name == 'main'
+      uses: actions/upload-artifact@v4
+      with:
+        name: helm-artifacts
+        path: ${{ github.workspace }}/helm-charts
+
     - name: Login to Docker Hub
       uses: docker/login-action@v3
       with:
@@ -80,3 +87,32 @@ jobs:
         push: true
         context: ./src
         tags: ${{ secrets.DOCKERHUB_USERNAME }}/${{ env.DockerImageName }}:${{ github.sha }}
+
+  helm-ci:
+    needs: build-image
+    runs-on: ubuntu-latest
+    if: github.ref_name == 'main'
+    name: Helm CI
+    steps:
+    - uses: actions/download-artifact@v4
+      with:
+        name: helm-artifacts
+        path: .
+
+    - name: Set up Helm
+      uses: azure/setup-helm@v4.2.0
+
+    - name: Lint Helm
+      run: helm lint ./kube2py/
+
+    - name: Template Helm
+      run: helm template kube2py ./kube2py -f ./kube2py/values.yaml
+
+    - name: Package Helm
+      run: helm package ./kube2py/
+
+    - name: Upload Helm package
+      uses: actions/upload-artifact@v4
+      with:
+        name: helm-package
+        path: ./*.tgz
