--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -90,7 +90,7 @@ jobs:
 
   helm-ci:
     needs: build-image
-    runs-on: ubuntu-latest
+    runs-on: python-ci
     if: github.ref_name == 'main'
     name: Helm CI
     steps:
@@ -116,4 +116,3 @@ jobs:
       with:
         name: helm-package
         path: ./*.tgz
-
