--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -89,7 +89,7 @@ jobs:
         tags: ${{ secrets.DOCKERHUB_USERNAME }}/${{ env.DockerImageName }}:${{ github.sha }}
 
   helm-ci:
-    needs: build-image
+    needs: python-ci
     runs-on: ubuntu-latest
     if: github.ref_name == 'main'
     name: Helm CI
