--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -103,13 +103,13 @@ jobs:
       uses: azure/setup-helm@v4.2.0
 
     - name: Lint Helm
-      run: helm lint ./kube2py/
+      run: helm lint ./todoapp/
 
     - name: Template Helm
-      run: helm template kube2py ./kube2py -f ./kube2py/values.yaml
+      run: helm template todoapp ./kube2py -f ./todoapp/values.yaml
 
     - name: Package Helm
-      run: helm package ./kube2py/
+      run: helm package ./todoapp/
 
     - name: Upload Helm package
       uses: actions/upload-artifact@v4
