--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -65,8 +65,8 @@ jobs:
 
   docker-ci:
     runs-on: ubuntu-latest
-    if: ${{ github.ref_name == 'main' }}
-    needs: ['python-ci']
+    if: github.ref_name == 'main'
+    needs: python-ci
     steps:
 
     - uses: actions/download-artifact@v4
@@ -89,7 +89,7 @@ jobs:
         tags: ${{ secrets.DOCKERHUB_USERNAME }}/${{ env.DockerImageName }}:${{ github.sha }}
 
   helm-ci:
-    needs: ['python-ci']
+    needs: python-ci
     runs-on: ubuntu-latest
     if: github.ref_name == 'main'
     name: Helm CI
@@ -109,9 +109,9 @@ jobs:
       run: helm template todoapp ./todoapp -f ./todoapp/values.yaml
 
     - name: Package Helm
-      run: helm package ./todoapp/
+      run: helm package ./todoapp
 
-    - name: Upload Helm package
+    - name: Upload Helm Artifact
       uses: actions/upload-artifact@v4
       with:
         name: helm-package
