--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -57,7 +57,7 @@ jobs:
           path: .
 
       - name: Upload helm artifacts
-        if: github.ref_name == 'main'
+        if: ${{ github.ref_name == 'main' }}
         uses: actions/upload-artifact@v4
         with:
           name: helm-artifacts
@@ -65,7 +65,7 @@ jobs:
 
   docker-ci:
     runs-on: ubuntu-latest
-    if: github.ref_name == 'main'
+    if: ${{ github.ref_name == 'main' }}
     needs: python-ci
     steps:
 
@@ -91,7 +91,7 @@ jobs:
   helm-ci:
     needs: python-ci
     runs-on: ubuntu-latest
-    if: github.ref_name == 'main'
+    if: ${{ github.ref_name == 'main' }}
     name: Helm CI
     steps:
     - uses: actions/download-artifact@v4
