--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -65,6 +65,7 @@ jobs:
 
   docker-ci:
     runs-on: ubuntu-latest
+    if: ${{ github.ref_name == 'main' }}
     needs: python-ci
     steps:
 
@@ -90,6 +91,7 @@ jobs:
   helm-ci:
     needs: python-ci
     runs-on: ubuntu-latest
+    if: ${{ github.ref_name == 'main' }}
     name: Helm CI
     steps:
     - uses: actions/download-artifact@v4
