--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,6 @@
 name: python-deployment
 
-run-name: ${{ github.actor }} - ${{ github.ref_name}} -${{ github.sha }}
+run-name: ${{ github.actor }} - ${{ github.ref_name }} - ${{ github.sha }}
 
 on:
   push:
@@ -64,7 +64,7 @@ jobs:
 
   docker-ci:
     runs-on: ubuntu-latest
-    if: ${{ github.base_ref == 'main' }}
+    if: ${{ github.event_name == 'push' || github.event.pull_request.base.ref == 'main' }}
     needs: python-ci
     steps:
     - name: Download python artifacts
@@ -89,7 +89,7 @@ jobs:
   helm-ci:
     runs-on: ubuntu-latest
     needs: python-ci
-    if: ${{ github.base_ref == 'main' }}
+    if: ${{ github.event_name == 'push' || github.event.pull_request.base.ref == 'main' }}
 
     steps:
       - name: Download helm artifacts
